# Flask-FlatPages

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  HOWTO  HOWTO.rst  LICENSE  MANIFEST.in  Makefile  README  README.rst  pyproject.toml  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
flask_flatpages/: __init__.py  cache.py  compat.py  filters.py  flatpages.py  imports.py  page.py  renderer.py  tests.py  utils.py
flask_flatpages/pages/: multi_renderer.json
flask_flatpages/pages/order/: one.html  three.html  two.html
flask_flatpages/parsers/: __init__.py  toml.py  yaml.py
flaskext/: flatpages.py
flaskext/flatpages/: __init__.py  tests.py
flaskext/flatpages/test_pages/: hello.html
flaskext/flatpages/test_pages_shift_jis/: hello.html
flaskext/flatpages/tests/: __init__.py
flaskext/flatpages/tests/pages/: foo.html  hello.html
flaskext/flatpages/tests/pages_shift_jis/: hello.html
news/: template.rst
releasenotes/: config.yaml
releasenotes/notes/: add-parsers-package-b298933fe94e2de8.yaml  current_app-be060922f41401a0.yaml  extension-guidelines-d852c045b2aad87d.yaml  page_meta_dict-f486310d3d50b42b.yaml  toml_parser-3f4ffb2f476899bb.yaml  v0.7.3-changes-41639c8aa5bb2e63.yaml  v0.8-changes-41639c8aa5bb2e63.yaml  v0.8-changes-4b526a8e7b484f87.yaml  v0.8.1-notes-95c8754bed07815d.yaml  v0.8.2-maintenance-release-7993473d2d6efcb2.yaml  v0.8.3-warnings-6045e1f383b65197.yaml  v0.9.0-release-af353622400a605e.yaml
test_flatpages/: __init__.py
testapp/: .coveragerc  Makefile  app.py  manage.py  requirements.txt  tests.py  views.py
testapp/pages/: toc.html
tests/: conftest.py  test_flask_flatpages.py  test_flask_flatpages_toml.py  test_flatpages_cache.py  test_markdown_extensions.py  test_parsers_toml.py  test_temp_directory.py
tests/pages/: codehilite.html  draft.html  extra.html  foo.html  headerid.html  pages.db
tests/pages/meta_styles/: closing_block_only.html  jekyll_style.html  multi_line.html  yaml_style.html
tests/pages_shift_jis/: pages.db
tests/pages_toml/: codehilite.html  extra.html  headerid.html  hello.html  toc.html
tests/pages_toml/meta_styles/: jekyll_style.html  multi_line.html  no_meta.html
