[build-system]
requires = ["setuptools < 45 ; python_version < '3'", "setuptools ; python_version > '2.7'", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-FlatPages"
dynamic = ["version"]
authors = [
  {name = "Simon Sapin"},
  {name = "Igor Davydenko"},
  {name = "Padraic Calpin"}
]
maintainers = [
  {name = "Padraic Calpin", email="itsme@padraic.xyz"}
]
description = "Provides flat static pages to a Flask application"
readme = "README.rst"
classifiers = [
     "Environment :: Web Environment",
     "Framework :: Flask",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Programming Language :: Python :: 2",
     "Programming Language :: Python :: 2.7",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
dependencies = [
  "Flask > 1.0",
  "Jinja2 >= 2.10.2",
  "Markdown >= 2.5",
  "PyYAML > 5.3.1",
  "pytz; python_version=='2.7'",
  "six"
]
[project.urls]
Repository = "https://github.com/Flask-FlatPages/Flask-FlatPages"
Documentation = "https://flask-flatpages.readthedocs.io/en/latest/"

[project.optional-dependencies]
codehilite = ["Pygmetns>=2.5.2",]

[tool.setuptools]
packages = ["flask_flatpages"]

[tool.setuptools.dynamic]
version = {attr = "flask_flatpages.__version__"}

[tool.tox]
legacy_tox_ini = """

[tox]
envlist =
  py{27,36,37,38,39,310,311,312}-pygments{yes,no}

[testenv]
deps =
  py27-pygments{yes,no}: mock==3.0.5
  py{27,36,37,38,39,310,311,312}-pygmentsyes: Pygments>=2.0.2
  coverage>=3.7.1
  docutils>=0.12
  flake8>=2.3.0
  flake8-docstrings>=0.2.1.post1
  flake8-import-order>=0.5.3
  flake8-pyproject
  mccabe>=0.3.0
  pep257>=0.5.0
  pep8>=1.6.2
  pep8-naming>=0.2.2
  pyflakes>=0.8.1
  pytest
  pytest-cov
commands =
  - python -m pytest -v --cov=flask_flatpages --cov-branch --cov-report term {posargs}

[testenv:docs]
deps = -rdocs/requirements.txt
commands=
 sphinx-build -d "{toxworkdir}/docs/_build/_doctree" docs "docs/_build/html" --color -W -bhtml {posargs} 

[testenv:lint]
commands=
  flake8 --statistics flask_flatpages/

[testenv:fmt]
skip_install = true
deps =
  black
commands=
  black {posargs}

[testenv:reno]
skip_install = true
deps =
  reno
commands =
  reno {posargs}
"""

[tool.flake8]
application-import-names = "flask_flatpages"
ignore = ["W503"]
import-order-style = "smarkets"
max-complexity = 20

[tool.pytest]
python_files = "*test*.py"

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38", "py39", "py310", "py311", "py312"]
skip-line-normalization = false

