[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-FlatPages"
dynamic = ["version"]
authors = [
    { name = "Simon Sapin" },
    { name = "Igor Davydenko" },
    { name = "Padraic Calpin" },
]
maintainers = [{ name = "Padraic Calpin", email = "itsme@padraic.xyz" }]
description = "Provides flat static pages to a Flask application"
readme = "README.rst"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.7"
dependencies = [
    "Flask > 1.0",
    "Jinja2 >= 2.10.2",
    "Markdown >= 2.5",
    "PyYAML > 5.3.1",
    "pytz; python_version=='2.7'",
]
[project.urls]
Repository = "https://github.com/Flask-FlatPages/Flask-FlatPages"
Documentation = "https://flask-flatpages.readthedocs.io/en/latest/"

[project.optional-dependencies]
codehilite = ["Pygments>=2.5.2"]


[dependency-groups]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = ["flask_flatpages"]

[tool.setuptools.dynamic]
version = { attr = "flask_flatpages.__version__" }

[tool.tox]
envlist = [
    "docs",
    "lint",
    "fmt",
    "py37",
    "py37-pygments",
    "py38",
    "py38-pygments",
    "py39",
    "py39-pygments",
    "py310",
    "py310-pygments",
    "py311",
    "py311-pygments",
    "py312",
    "py312-pygments",
    "py313",
    "py313-pygments",
]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [
    [
        "python",
        "-m",
        "pytest",
        "-v",
        "--cov=flask_flatpages",
        "--cov-branch",
        "--cov-report",
        "term",
        "{posargs}",
    ],
]

[tool.tox.env.py37-pygments]
extras = ["codehilite"]

[tool.tox.env.py38-pygments]
extras = ["codehilite"]

[tool.tox.env.py39-pygments]
extras = ["codehilite"]

[tool.tox.env.py310-pygments]
extras = ["codehilite"]

[tool.tox.env.py311-pygments]
extras = ["codehilite"]

[tool.tox.env.py312-pygments]
extras = ["codehilite"]

[tool.tox.env.py313-pygments]
extras = ["codehilite"]

[tool.tox.env.docs]
commands = [
    [
        "sphinx-build",
        "-d",
        "{toxworkdir}/docs/_build/_doctree",
        "docs",
        "docs/_build/html",
        "--color",
        "-W",
        "-b",
        "html",
    ],
]
deps = ["-r docs/requirements.txt"]

[tool.tox.env.lint]
deps = [
    "flake8>=2.3.0",
    "flake8-docstrings>=0.2.1.post1",
    "flake8-import-order>=0.5.3",
    "flake8-pyproject",
    "mccabe>=0.3.0",
    "pep257>=0.5.0",
    "pep8>=1.6.2",
    "pep8-naming>=0.2.2",
    "pyflakes>=0.8.1",
]
commands = [["flake8", "--statistics", "flask_flatpages/"]]

[tool.tox.env.fmt]
skip_install = true
deps = ["black"]
commands = [["black", "{posargs:flask_flatpages}"]]

[tool.tox.env.reno]
skip_install = true
deps = ["reno"]
commands = [["reno", "{posargs}"]]

[tool.flake8]
application-import-names = "flask_flatpages"
ignore = ["W503"]
import-order-style = "smarkets"
max-complexity = 20

[tool.pytest]
python_files = "*test*.py"

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]
skip-line-normalization = false
