[build-system]
requires = [
    "setuptools ; python_version > '2.7'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-FlatPages"
dynamic = ["version"]
authors = [
    { name = "Simon Sapin" },
    { name = "Igor Davydenko" },
    { name = "Padraic Calpin" },
]
maintainers = [{ name = "Padraic Calpin", email = "itsme@padraic.xyz" }]
description = "Provides flat static pages to a Flask application"
readme = "README.rst"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = [
    "Flask > 1.0",
    "Jinja2 >= 2.10.2",
    "Markdown >= 2.5",
    "PyYAML > 5.3.1",
    "pytz; python_version=='2.7'",
    "six",
]
[project.urls]
Repository = "https://github.com/Flask-FlatPages/Flask-FlatPages"
Documentation = "https://flask-flatpages.readthedocs.io/en/latest/"

[project.optional-dependencies]
codehilite = ["Pygments>=2.5.2"]


[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock>=3.14.1",
    "reno",
    "ruff",
]
codehilite = ["Pygments"]

[tool.uv]
default-groups = "all"

[tool.setuptools]
packages = ["flask_flatpages"]

[tool.setuptools.dynamic]
version = { attr = "flask_flatpages.__version__" }

[tool.tox]
envlist = [
    "docs",
    "lint",
    "fmt",
    "py38",
    "py38-pygments",
    "py39",
    "py39-pygments",
    "py310",
    "py310-pygments",
    "py311",
    "py311-pygments",
    "py312",
    "py312-pygments",
    "py313",
    "py313-pygments",
    "py314",
    "py314-pygments",
]


[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [
    [
        "python",
        "-m",
        "pytest",
        "-v",
        "--cov=flask_flatpages",
        "--cov-branch",
        "--cov-report",
        "term",
        "{posargs}",
    ],
]

[tool.tox.env.py38-pygments]
extras = ["codehilite"]

[tool.tox.env.py39-pygments]
extras = ["codehilite"]

[tool.tox.env.py310-pygments]
extras = ["codehilite"]

[tool.tox.env.py311-pygments]
extras = ["codehilite"]

[tool.tox.env.py312-pygments]
extras = ["codehilite"]

[tool.tox.env.py313-pygments]
extras = ["codehilite"]

[tool.tox.env.py314-pygments]
extras = ["codehilite"]


[tool.tox.env.docs]
commands = [
    [
        "sphinx-build",
        "-d",
        "{toxworkdir}/docs/_build/_doctree",
        "docs",
        "docs/_build/html",
        "--color",
        "-W",
        "-b",
        "html",
    ],
]
deps = ["-r docs/requirements.txt"]

[tool.tox.env.lint]
skip_install = true
deps = ["ruff"]
commands = [
    ["ruff", "check", "flask_flatpages/"],
    ["ruff", "format", "--check", "flask_flatpages/"],
]

[tool.tox.env.fmt]
skip_install = true
deps = ["ruff"]
commands = [["ruff", "format", "{posargs:flask_flatpages}"]]

[tool.tox.env.reno]
skip_install = true
deps = ["reno"]
commands = [["reno", "{posargs}"]]

[tool.flake8]
application-import-names = "flask_flatpages"
ignore = ["W503"]
import-order-style = "smarkets"
max-complexity = 20

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
exclude = ["docs/conf.py"]
