[build_sphinx]
source-dir = docs
build-dir  = docs/_build


[aliases]
test = pytest

[tools:pytest]
python_files = *test*.py

[bdist_wheel]
universal = 1

[metadata]
name = Flask-FlatPages
version = 0.7.2
url = https://github.com/Flask-FlatPages/Flask-FlatPages
author = Simon Sapin, Igor Davydenko, Padraic Calpin
author_email = simon.sapin@exyr.org
maintainer = Padraic Calpin
maintainer_email = itsme@padraic.xyz
license = BSD
description = Provides flat static pages to a Flask application
long_description = file: README.rst
classifiers = 
     Environment :: Web Environment
     Framework :: Flask
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
     Topic :: Software Development :: Libraries :: Python Modules
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
platforms=any

[options]
packages = flask_flatpages
setup_requires = pytest-runner
tests_require = pytest;Pygments>=1.6;pytz
install_requires = 
    Flask>1.0 
    Jinja2>=2.10.2
    Markdown>=2.5
    PyYAML==5.3.1; python_version=="3.5"
    PyYAML>5.3.1; python_version!="3.5"
    pytz; python_version=="2.7"
	six
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
zip_safe = False


[options.extras_require]
docs = Sphinx>=1.4; Pallets-Sphinx-Themes; Pygments
codehilite = Pygments>1.6
